@@ -1,8 +1,10 @@
 #!/usr/bin/env ruby
 #
+#--
 # (c) Copyright 2007 Nick Sieger <nicksieger@gmail.com>
 # See the file LICENSES.txt included with the distribution for
 # software license details.
+#++
 
 require 'rubygems'
 require 'rake'
