@@ -41,6 +41,14 @@
     </description>
 	</context-param>
 
+	<context-param>
+		<param-name>files.prefix</param-name>
+		<param-value></param-value>
+		<description>
+		  Prefix added to static files
+    </description>
+	</context-param>
+
 	<listener>
 		<listener-class>org.jruby.webapp.RailsContextListener</listener-class>
 	</listener>
